Closed Bug 585969 Opened 15 years ago Closed 15 years ago

getBookmarkedURIFor should not try to add new pages

Categories

(Toolkit :: Places, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b5

People

(Reporter: mak, Assigned: mak)

References

Details

Attachments

(1 file)

this method has no reason to add a page if it's missing, it is just conflicting with other add pages.
Blocks: 585966
Attached patch patch v1.0Splinter Review
not blocking but nice to have for contentions and really small change, so it will require approval.
Attachment #464525 - Flags: review?(sdwilsh)
Comment on attachment 464525 [details] [diff] [review] patch v1.0 r+a=sdwilsh
Attachment #464525 - Flags: review?(sdwilsh)
Attachment #464525 - Flags: review+
Attachment #464525 - Flags: approval2.0+
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: