Bug 585969 - getBookmarkedURIFor should not try to add new pages. r+a=sdwilsh