toolkit/components/places/tests/head_common.js
@@ -252,6 +252,29 @@ function dump_table(aName)
 
 
 /**
+ * Checks if an address is found in the database.
+ * @param aUrl
+ *        Address to look for.
+ * @return place id of the page or 0 if not found
+ */
+function page_in_database(aUrl)
+{
+  let stmt = DBConn().createStatement(
+    "SELECT id FROM moz_places_view WHERE url = :url"
+  );
+  stmt.params.url = aUrl;
+  try {
+    if (!stmt.executeStep())
+      return 0;
+    return stmt.getInt64(0);
+  }
+  finally {
+    stmt.finalize();
+  }
+}
+
+
+/**
  * Removes all bookmarks and checks for correct cleanup
  */
 function remove_all_bookmarks() {
